# workforce-intelligence-platform-llm-eval

./: .gitignore  Makefile  README.md  TASKS.md  pyproject.toml
.github/workflows/: llm-eval-ci.yml
airflow/dags/: llm_eval_embedding_refresh.py  llm_eval_nightly.py
airflow/plugins/: llm_eval_plugin.py
docker/: init_llm_schema.sql
notebooks/: eval_exploration.ipynb
src/: __init__.py
src/embeddings/: encoder.py  pipeline.py  store.py
src/eval/: metrics_writer.py  qa_generator.py  ragas_harness.py
src/feedback/: store.py
src/masking/: views.py
src/pipeline/: eval.py  setup.py
src/utils/: alerts.py  db.py
tests/: conftest.py
tests/integration/: test_eval_pipeline.py  test_pgvector_store.py
tests/unit/: test_db.py  test_encoder.py  test_masking.py  test_metrics_and_feedback.py  test_pipeline.py  test_qa_generator.py  test_ragas_harness.py  test_store.py
