[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[project]
name = "wip-llm-eval"
version = "0.1.0"
description = "LLM evaluation data infrastructure — workforce-intelligence-platform module 2"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "ragas>=0.1.9",
    "datasets>=2.19",
    "openai>=1.30",
    "pydantic>=2.7",
    "faker>=25.0",
    "python-dotenv>=1.0",
    "apache-airflow>=2.9.1",
    "langchain-community>=0.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "testcontainers[postgres]>=4.5",
    "ruff>=0.4",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running Docker infrastructure",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "docker/*", "notebooks/*"]
