[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[project]
name = "wip-llm-eval"
version = "0.1.0"
description = "LLM evaluation data infrastructure — workforce-intelligence-platform module 2"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "ragas>=0.1.9,<0.2",
    "datasets>=2.19",
    "anthropic>=0.30",
    "openai>=1.30",
    "pydantic>=2.7",
    "faker>=25.0",
    "python-dotenv>=1.0",
    "apache-airflow>=2.9.1",
    "httpx>=0.27",
    # LangChain stack pinned to the 0.2 line: ragas 0.1.9 imports
    # langchain_community.chat_models.vertexai, which langchain-community 0.3+/1.x
    # removed — an unpinned install pulls langchain 1.x and breaks `import ragas`.
    # langchain-anthropic 0.1.x is the RAGAS judge integration (see src/eval/ragas_harness.py).
    "langchain>=0.2,<0.3",
    "langchain-core>=0.2,<0.3",
    "langchain-community>=0.2,<0.3",
    "langchain-openai>=0.1,<0.2",
    "langchain-anthropic>=0.1.15,<0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "testcontainers[postgres]>=4.5",
    "ruff>=0.4",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running Docker infrastructure",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "docker/*", "notebooks/*"]
